Versão prévia da área de login criada

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -10,22 +10,24 @@
     <!--Link para os scripts-->
 </head>
 <body>
-    <div class="header">
-        <span class="span_bold">Tarefas</span> Pendentes
-        <span class="span_bold" style="display: block;">IFPA 2023</span>
+    <div>
+        <span class="span_bold">Tarefas</span> Pendentes  
+        <span class="span_bold">IFPA 2023</span>
     </div>
-    <h2>Login</h2>
+    <h1>Crie uma conta</h1>
     <section>
         <form action="#" method="post">
+            <label for="inome">Primeiro nome</label>
+            <input type="text" name="nome" id="inome" placeholder="Digite seu nome">
             <label for="iemail">Email</label>
             <input type="email" name="iemail" id="iemail" placeholder="Digite seu email"><br>
             <label for="isenha">Senha</label>
             <input type="password" name="senha" id="isenha" placeholder="Digite sua senha"><br>
         
-            <input type="submit" value="Entrar Agora" class="submit">
+            <input type="submit" value="Entrar Agora">
         </form>
-        Novo por aqui?
-        <span class="span_bold"><a href="./pages/cadastro.php">Crie uma conta</a></span>
+        Já tem uma conta?
+        <span class="span_bold">Entre agora</span>
     </section>
 </body>
 </html>
