--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!--Link para os scripts-->
 </head>
 <body>
-    <div class="header">
-        <span class="span_bold">Tarefas</span> Pendentes
-        <span class="span_bold" style="display: block;">IFPA 2023</span>
-    </div>
-    <h2>Login</h2>
     <section>
+        <div class="header">
+            <span class="span_bold">Tarefas</span> Pendentes
+            <span class="span_bold" style="display: block;">IFPA 2023</span>
+        </div>
+        <h2>Login</h2>
         <form action="#" method="post">
             <label for="iemail">Email</label>
             <input type="email" name="iemail" id="iemail" placeholder="Digite seu email"><br>
@@ -25,7 +25,7 @@
             <input type="submit" value="Entrar Agora" class="submit">
         </form>
         Novo por aqui?
-        <span class="span_bold"><a href="./pages/cadastro.php">Crie uma conta</a></span>
+        <span class="span_bold"><a href="./pages/cadastro.php" style="text-decoration: none;">Crie uma conta</a></span>
     </section>
 </body>
 </html>
