--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <!--Link para os scripts-->
 </head>
 <body>
+    <div class="header">
+        <span class="span_bold">Tarefas</span> Pendentes
+        <span class="span_bold" style="display: block;">IFPA 2023</span>
+    </div>
     <section>
-        <div class="header">
-            <span class="span_bold">Tarefas</span> Pendentes
-            <span class="span_bold" style="display: block;">IFPA 2023</span>
-        </div>
         <h2>Login</h2>
         <form action="#" method="post">
             <label for="iemail">Email</label>
-            <input type="email" name="iemail" id="iemail" placeholder="Digite seu email"><br>
+            <input type="email" name="iemail" id="iemail" placeholder="Digite seu email">
             <label for="isenha">Senha</label>
-            <input type="password" name="senha" id="isenha" placeholder="Digite sua senha"><br>
+            <input type="password" name="senha" id="isenha" placeholder="Digite sua senha">
         
             <input type="submit" value="Entrar Agora" class="submit">
         </form>
         Novo por aqui?
-        <span class="span_bold"><a href="./pages/cadastro.php" style="text-decoration: none;">Crie uma conta</a></span>
+        <span class="span_bold"><a href="./src/pages/cadastro.html" style="text-decoration: none;">Crie uma conta</a></span>
     </section>
 </body>
 </html>
