Icones adicionados ao login e cadastro

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -18,10 +18,15 @@
         <h2>Crie uma conta</h2>
         <form action="#" method="post">
             <label for="inome">Primeiro nome</label>
+            <img src="../components/images/Pessoa (Nome de Usuário).svg" width="20" alt="">
             <input type="text" name="nome" id="inome" placeholder="Digite seu nome">
+
             <label for="iemail">Email</label>
+            <img src="../components/images/Email.svg" width="20" alt="email" class="email">
             <input type="email" name="iemail" id="iemail" placeholder="Digite seu email">
+
             <label for="isenha">Senha</label>
+            <img src="../components/images/Vector.svg" width="20" alt="Senha" class="senha">
             <input type="password" name="senha" id="isenha" placeholder="Digite sua senha">
         
             <input type="submit" value="Criar Conta " class="submit">
