--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
         <h2>Login</h2>
         <form action="#" method="post">
             <label for="iemail">Email</label>
+            <img src="./src/components/images/Email.svg" alt="svg email" width="20">
             <input type="email" name="iemail" id="iemail" placeholder="Digite seu email">
+
             <label for="isenha">Senha</label>
+            <img src="src/components/images/Vector.svg" width="20" alt="Senha" class="senha">
             <input type="password" name="senha" id="isenha" placeholder="Digite sua senha">
         
             <input type="submit" value="Entrar Agora" class="submit">
