--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Login</h2>
         <form action="#" method="post">
             <label for="iemail">Email</label>
-            <img src="./src/components/images/Email.svg" alt="svg email" width="20">
+            <img src="./src/components/images/Email.svg" alt="svg email" class="email" width="20">
             <input type="email" name="iemail" id="iemail" placeholder="Digite seu email">
 
             <label for="isenha">Senha</label>
