--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -21,7 +21,7 @@
             <p class="content"><b>Feito por Estudantes para Estudantes</b></p>
         </div>
         <form action="#" method="post" autocomplete="on">
-            <label for="inome">Primeiro nome
+            <label for="inome">Como podemos te chamar?
                 <img src="../components/images/Pessoa (Nome de Usuário).svg" width="20" alt="Usuario" class="user">
                 <span style="color: red
                 ;">*</span>
