Link para navegar até a tela de tarefas

--- a/src/pages/tasks.html
+++ b/src/pages/tasks.html
@@ -54,6 +54,8 @@
                 <li>Isso é uma Atividade (Nome dela fica aqui)</li>
             </ul>
         </div>
+
+        <a href="../../index.html">Voltar</a>
     </section>
 </body>
 </html>
