--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </form>
        
         <span style="font-size: 12px;"> Novo por aqui?<a href="./src/pages/cadastro.html" style="text-decoration: none;"> Crie uma conta</a></span>
+        <a href="./src/pages/tasks.html">Página Tarefas</a>
     </section>
 </body>
 </html>
