update página tasks

--- a/src/pages/tasks.html
+++ b/src/pages/tasks.html
@@ -11,13 +11,20 @@
 </head>
 <body>
     <div class="user">
-        <img src="../components/images/Pessoa (Nome de Usuário).svg" width="30" alt="Imagem de Usuário">
+        <div class="user">
+            <img src="../components/images/Pessoa (Nome de Usuário).svg" width="30" alt="Imagem de Usuário">
+            <p>
+                Olá, <b>Lulinha!</b><br>
+                <span>Desenvolvimento de Sistemas</span>
+            </p>
+        </div>
 
         <input type="search" name="Pesuisa" id="ipesquisa">
         <label for="ipesquisa">
             <img src="../components/images/Pesquisa.svg" width="30" alt="">
         </label>
     </div>
+
     <section id="tasks">
         <div class="urgentes">
             <p>Urgentes: xx</p>
