--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>cadastro</title>
     <!--Link para os estilos-->
     <link rel="stylesheet" href="../styles/cadastro.css">
     <!--Link para os scripts-->
