--- a/src/pages/tasks.html
+++ b/src/pages/tasks.html
@@ -31,10 +31,14 @@
                 Olá, <b>Lulinha!</b><br>
                 <span>Desenvolvimento de Sistemas</span>
             </p>
-        </div>
             <img src="../components/images/Pesquisa.svg" width="30" alt="">
+        </div>
+        
+        <div class="create-task">
+            <button id="create-task">Criar Tarefa <img src="../components/images/Lápis (Adicionar atividade).svg" alt=""></button>
+        </div>
     </div>
-
+    
 <section id="tasks">
     <div id="accordion">
         <p>Urgentes: xx</p>
@@ -70,7 +74,11 @@
             </ul>
         </div>
     </div>
-
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic exercitationem quaerat rerum ducimus soluta molestiae quae, sequi inventore illum facilis harum neque ad facere asperiores dolor voluptate repellendus sit odit.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni asperiores doloremque sequi? Voluptate cupiditate eum veniam quod accusamus eius laboriosam illum eveniet odit minus libero ullam, quidem consequatur quibusdam tenetur!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque officia voluptates vero quidem sapiente cumque obcaecati nobis deserunt natus dignissimos enim illo, nesciunt laudantium suscipit soluta expedita id. Mollitia, ab.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit quas harum quasi, neque totam esse dignissimos vero ipsa repellendus, iste porro aut dolorem distinctio. Laborum quibusdam quam maxime incidunt esse!
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium esse, cupiditate corporis ad odit iste harum labore at sit et provident impedit, minus expedita pariatur! Voluptas numquam sit pariatur iste.
     <a href="../../index.html">Voltar</a>
 </section>
 </body>
