Atualização da cor do titulo das sessoes das tarefas

--- a/src/pages/tasks2.html
+++ b/src/pages/tasks2.html
@@ -48,7 +48,7 @@
             </div>
             <!--Tarefas Urgentes-->
             <div id="accordion">
-                <span class="title-section">Urgente: ##</span>
+                <span class="title-section" class="color-title" style="background-color: #2BB673; border: #2BB673;">Urgente: ##</span>
                 <div class="urgente-task task-div">
                     <div class="task" id="task-id">
                         <div class="task-name">
@@ -65,7 +65,7 @@
                 </div>
 
                 <!--Tarefas Pendentes-->
-                <span class="title-section">Tarefas Pendentes: ##</span>
+                <span class="title-section" style="background-color: #2BB673; border: #2BB673;">Tarefas Pendentes: ##</span>
                 <div class="pendente-task task-div">
                     <div class="task" id="task-id">
                         <div class="task-name">
@@ -106,7 +106,7 @@
                 </div>
 
                 <!--Tarefas Concluidas-->
-                <span class="title-section">Tarefas Concluídas: ##</span>
+                <span class="title-section" style="background-color: #2BB673; border: #2BB673;">Tarefas Concluídas: ##</span>
                 <div class="concluded-task task-div">
                     <div class="task" id="task-id">
                         <div class="task-name">
