--- a/src/pages/tasks2.html
+++ b/src/pages/tasks2.html
@@ -31,7 +31,8 @@
                 <span><span>Olá,</span><span class="extrabold"> Lulinha</span></span>
                 <span class="subtitle">Desenvolvimento de Sistemas III</span></div>
             </div>
-
+            
+            <a href="../../index.html">Home</a>
             <img class="search" src="../components/images/Pesquisa.svg" style="margin-right: 3px;">
         </div>
 
