--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <span class="span_bold">Tarefas</span> Pendentes
-        <span class="span_bold" style="display: block;">IFPA 2023</span>
+        <span class="span_bold" style="display: block; color: green;">IFPA 2023</span>
     </div>
     <section>
         <h2>Crie uma conta</h2>
