--- a/teste.html
+++ b/teste.html
@@ -53,7 +53,9 @@
               <span class="task-title">Isso é uma atividade</span>
 
               <span class="subtitle task-materia"> Desenvolvimento de Sistemas</span>
-        </div>
+
+              <span></span>
+            </div>
       
         <div id="taskDate" style="display: flex; align-items: center;">
               <span class="subtitle task-date">FEV 19 <span class="bold" style="margin-left: 3px;">08:40</span></span>
@@ -80,12 +82,13 @@
   // Adicionar o conteúdo do novo elemento
   newTask.innerHTML = `
     <div class="task-name">
-      <span class="task-title">${title}</span>
-      <span class="subtitle task-materia">${materia}</span>
+      <span class="task-title">Titulo: ${title}</span>
+      <span class="subtitle task-materia">Matéria: ${materia}</span>
+      <span>Descrição: ${descricao}</span>
     </div>
     <div id="taskDate" style="display: flex; align-items: center;">
       <span class="subtitle task-date">${data}</span>
-      <span class="priority ${prioridade.toLowerCase()}"></span>
+      <span class="priority ${prioridade.toLowerCase()} intermediario"></span>
     </div>
   `;
 
