páginas criadas e linkadas

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </form>
        
         <span style="font-size: 12px;"> Novo por aqui?<a href="./src/pages/cadastro.html" style="text-decoration: none;"> Crie uma conta</a></span>
-        <a href="./src/pages/tasks2.html">Página Tarefas</a>
+        <a href="./src/pages/dashboard.html>Página Tarefas</a>
     </section>
     <script>
         const passwordInput = document.getElementById("isenha");
