--- a/src/pages/create-task.html
+++ b/src/pages/create-task.html
@@ -80,7 +80,7 @@
                 </datalist></select>
                 
             </div>
-                <input type="submit" class="input-submit"  value="Criar Tarefa"> 
+                <input type="submit" id="create-task" class="input-submit"  value="Criar Tarefa"> 
             
             </form>
         </div>
