--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -19,7 +19,7 @@
                 <span class="subtitle">Desenvolvimento de Sistemas III</span></div>
             </div>
 
-            <img class="search" src="src/Pesquisa.svg" style="margin-right: 3px;">
+            <img class="search" src="../components/images/Pesquisa.svg" style="margin-right: 3px;">
         </div>
 
         <div class="dashboard-body" style="display: flex; flex-direction: column;">
@@ -58,7 +58,7 @@
             <div class="pendente-task task-div">
                 <div class="drop-title" id="droptitle-1">
                     <span class="title-section drop">Tarefas Pendentes: ##</span>
-                    <span id="dropimg-1" class="subtitle bold">Ver Tarefas <img id="rotateimg-1" src="src/Drop.svg" alt="Ver Tarefas"></span>
+                    <span id="dropimg-1" class="subtitle bold">Ver Tarefas <img id="rotateimg-1" src="../components/images/droplist.svg" alt="Ver Tarefas"></span>
                 </div>
 
                 <div class="drop-task " id="droptask-1">
@@ -111,7 +111,7 @@
             <div class="concluded-task task-div">
                 <div class="drop-title" id="droptitle-2">
                     <span class="title-section drop">Tarefas Concluídas: ##</span>
-                    <span id="dropimg-2" class="subtitle bold">Ver Tarefas <img id="rotateimg-2" src="src/Drop.svg" alt="Ver Tarefas"></span>
+                    <span id="dropimg-2" class="subtitle bold">Ver Tarefas <img id="rotateimg-2" src="../components/images/droplist.svg" alt="Ver Tarefas"></span>
                 </div>
 
                 <div class="drop-task" id="droptask-2">    
@@ -191,7 +191,7 @@
         <!--Botão Fixo Criar Task-->    
         <a href="create-task.html" class="create-task-button">
             <span class="button-text"> Criar Tarefa</span>
-            <img class="create-svg" src="src/Lápis (Adicionar atividade).svg" style="margin-left: 8px;">
+            <img class="create-svg" src="../components/images/Lápis (Adicionar atividade).svg" style="margin-left: 8px;">
         </a>
     </div>
 
