Páginas criadas e linkadas

--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -14,10 +14,14 @@
             <div style="display: flex; flex-direction: row; align-items: center;">
                 <img class="profile-photo" src="https://s2.glbimg.com/z4E7d9iXw5XeEzcIsSTw-lYiuDM=/0x0:3840x2560/924x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_63b422c2caee4269b8b34177e8876b93/internal_photos/bs/2023/O/7/7y8qEjTVOy9RJCjr11IQ/24daf6411fb6466eb810e45060c65eda-0-428a2069115f48a787ae9ae9cb26105a.jpg" >
 
+                
                 <div class="title-header" style= "margin-left: 8px;">
-                <span><span>Olá,</span><span class="extrabold"> Lulinha</span></span>
-                <span class="subtitle">Desenvolvimento de Sistemas III</span></div>
-            </div>
+                    <span><span>Olá,</span><span class="extrabold"> Lulinha</span></span>
+                    <span class="subtitle">Desenvolvimento de Sistemas III</span></div>
+                </div>
+                
+                <a href="./create-profile.html">create-profile</a>
+                <a href="../../index.html">Index(Home)</a>
 
             <img class="search" src="../components/images/Pesquisa.svg" style="margin-right: 3px;">
         </div>
