mudança da cor das tarefas urgentes

--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -40,10 +40,10 @@
             </div>
 
             <!--Tasks Urgentes-->
-            <div class="urgente-task task-div">
+            <div class="task-div">
                 <span class="title-section">Urgente: ##</span>
 
-                <div class="task" id="task-id">
+                <div class="task urgente-task">
 
                     <div class="task-name"> 
                         <span class="task-title">Isso é uma atividade</span>
