--- a/src/pages/create-task.html
+++ b/src/pages/create-task.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             
-            <form onsubmit="createTask(); return false;" autocomplete="on">
+            <form autocomplete="on">
                 <div class="login-div" style="margin-top: 40px;" >
                     <span class="title-section">Título</span>
                     <input type="text" name="titulo" id="titulo" class= "input-text no-icon" required placeholder="Digite o título da tarefa">
