--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarefas Pendentes IFPA</title>
     <link rel="stylesheet" href="../styles/dashboard.css">
+
+    <!--Scripts-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body style="background-color: #F7F7F7;">
