create profile e criate task funcionais

--- a/src/pages/create-profile.html
+++ b/src/pages/create-profile.html
@@ -36,7 +36,7 @@
                         <input type="text" name="nome" id="inome" class= "input-text" required placeholder="Digite seu primeiro nome">
                     </div>
 
-                    <div class="login-div" id="iemail">
+                    <div class="login-div">
                         <span class="title-section">Email</span>
                         <label for="input" class="label"><img src="../components/images/Email.svg" alt="Email"></label>
                         <input type="email" name="email" id="iemail" class= "input-text" required placeholder="Digite seu email">
@@ -71,11 +71,12 @@
             
             <div class="paragrapher" style="margin-top: 16px; display: flex;
             justify-content: center;">Já possui uma conta? <a class="paragrapher link" href="index.html" alt="Faça Login" style="margin-left: 3px ;"> Faça Login</a></div>
-            <a class="paragrapher link"href="./dashboard.html" alt="Criar uma Conta" style="margin-left: 3px ;"> Ver Dashboard</a>
+            <a class="paragrapher link" href="./dashboard.html" alt="Criar uma Conta" style="margin-left: 3px ;"> Ver Dashboard</a>
         </div>
         </div>
             
         </div>
     </div>
+    <script src="../scripts/AjaxCreateProfile.js"></script>
 </body>
 </html>
